--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <ul>
-        <li><a href="/content/basic-html.html">basic-html</a></li>
-        <li><a href="/content/basic-css.html">basic-css</a></li>
-        <li><a href="/content/flex-layout.html">flex-layout</a></li>
+        <li><a href="./content/basic-html.html">basic-html</a></li>
+        <li><a href="./content/basic-css.html">basic-css</a></li>
+        <li><a href="./content/flex-layout.html">flex-layout</a></li>
     </ul>
 </body>
 </html>
