--- a/content/basic-css.html
+++ b/content/basic-css.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>basic-css</title>
-    <link rel="stylesheet" href="./css/basic-css.css" media="all">
+    <link rel="stylesheet" href="../css/basic-css.css" media="all">
 </head>
 <body>
     
