--- a/content/basic-html.html
+++ b/content/basic-html.html
@@ -45,7 +45,7 @@
 
     <p>これから<strong>ここを強調</strong>します</p>
 
-    <img src="../img/sample.jpg" width="150" height="150" alt="sample-image" />
+    <img src="https://tomioka-k.github.io/html-css-basic//img/sample.jpg" width="150" height="150" alt="sample-image" />
 
     <p><a href="https://www.google.com/?hl=ja">google</a></p>
 
